# sysroot_patch

GL/: CMakeLists.txt
GL/include/: gl.h
GL/src/: gl.c
GLU/: CMakeLists.txt
GLU/src/: glu.c
